# wastd

./:  sqlserver.Dockerfile  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pylintrc  .python-version  ACKNOWLEDGEMENTS.md  ACKNOWLEDGEMENTS.txt  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.txt  Dockerfile  LICENSE  Pipfile  Procfile  README.md  README.rst  areas.json  business_analysts.html  circle.yml  createentereruser.sh  createsuperuser.sh  data_consumers.html  data_entry.html  data_qa.html  developers.html  docker-compose.yml  entrypoint.sh  env.example  fabfile.py  functools.py  genindex.html  gunicorn.py  hoit  index.html  init-db.sql  init-postgis.sh  init-sqlserver.sh  manage.py  (+12 more)
.circleci/: config.yml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  data_request.md  doc_request.md  feature_request.md  form_request.md
.github/workflows/: django.yml  docker-publish.yml  docker.yml  docs_pages.yml  image-build-scan.yml  multi-build.yaml  multi-build.yml  run-tests.yml
_sources/: data_consumers.rst.txt
_static/: documentation_options.js
api/: schema.py
backup/: Dockerfile.sqltools
config/: Procfile  env.example  gunicorn.ini  urls.py  wastd.conf.template  wastd_uwsgi.ini.template  wsgi.py
config/settings/: common.py  local.py  production.py  test.py
conservation/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  resources.py  serializers.py  urls.py  views.py  widgets.py
conservation/fixtures/: test_data.json
conservation/migrations/: 0001_initial.py  0001_squashed_0027_auto_20180509_1048.py  0002_auto_20180404_1327.py  0002_auto_20180926_1147.py  0003_auto_20180404_1512.py  0003_auto_20190118_1211.py  0004_auto_20180404_1515.py  0004_auto_20190122_1637.py  0005_auto_20180404_1532.py  0005_auto_20190122_1638.py  0006_auto_20180405_0928.py  0006_managementaction_document.py  0007_auto_20180405_0934.py  0007_remove_document_management_actions.py  0008_auto_20180405_1008.py  0008_auto_20190124_1815.py  0009_auto_20180405_1009.py  0009_auto_20190125_1105.py  0010_auto_20180405_1039.py  0010_auto_20190125_1114.py  0011_auto_20180410_1504.py  0011_auto_20190215_1431.py  0012_auto_20180411_1008.py  0012_auto_20190225_1629.py  0013_auto_20180411_1314.py  0013_auto_20190307_1119.py  0014_auto_20180411_1314.py  0014_auto_20190307_1121.py  0015_auto_20180411_1324.py  0015_auto_20190327_1000.py  0016_auto_20180411_1416.py  0016_auto_20190327_1800.py  0017_auto_20180411_2121.py  0017_auto_20190328_0801.py  0018_auto_20180411_2131.py  0018_auto_20190408_1421.py  0019_auto_20180411_2204.py  0019_auto_20190410_1329.py  0020_auto_20180413_2031.py  0020_auto_20190418_1715.py  (+22 more)
conservation/tests/: test_api.py  test_functional.py  test_unit.py  test_views.py  tests_unit.py  tests_views.py
docs/: .buildinfo  Makefile  ODK Aggregate API.ipynb  business_analysts.html  business_analysts.rst  code.rst  conf.bak  conf.py  data_collectors.html  data_collectors.rst  data_consumers.html  data_consumers.rst  data_curators.html  data_curators.rst  data_entry.html  data_qa.html  deploy.rst  developers.html  developers.rst  docker_ec2.rst  genindex.html  index.html  index.rst  install.rst  maintainers.html  maintainers.rst  maintainers_outdated.html  make.bat  objects.inv  overview.rst  py-modindex.html  search.html  searchindex.js  specification.rst  tagging_form.html  third_party_access.html  third_party_access.rst
docs/_modules/: django_fsm.html  functools.html  index.html
docs/_sources/: data_collectors.rst.txt  data_consumers.rst.txt  data_curators.rst.txt  data_entry.rst.txt  data_qa.rst.txt  developers.rst.txt  index.rst.txt  maintainers.rst.txt  maintainers_outdated.rst.txt
docs/_static/: documentation_options.js
docs/data_collection/: data_collection_admin.html  data_collection_admin.rst  data_collection_development.html  data_collection_overview.html  data_collection_overview.rst  data_collection_training.html  data_collection_training.rst  (+2 more)
docs_source/: Makefile  conf.py  data_collectors.rst  data_consumers.rst  data_curators.rst  data_entry.rst  data_qa.rst  developers.rst  index.rst  maintainers.rst  make.bat  tagging_form.rst  third_party_access.rst
fixtures/: demo.json  groups.json  mpa.json  users.json
kustomize/: README.md
marine_mammal_incidents/: admin.py  apps.py  decorators.py  filters.py  forms.py  models.py  urls.py  views.py
observations/: admin.py  api.py  api_v2.py  apps.py  filters.py  forms.py  lookups.py  models.py  observations_schema_summary.md  odk.py  odk_import_summary.md  resources.py  serializers.py  serializers_v2.py  signals.py  tasks.py  urls.py  utils.py  views.py
occurrence/: admin.py  api.py  apps.py  filters.py  forms.py  models.py  resources.py  serializers.py  tests.py  urls.py  views.py  widgets.py  wms_config.py
requirements/: all.txt  base.txt  current_dev.txt  dev.txt  local.txt  production.txt  test.txt
shared/: admin.py  api.py  apps.py  dashboard.py  filters.py  forms.py  middleware.py  models.py  tests.py  utils.py  views.py
tagging/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
taxonomy/: admin.py  api.py  filters.py  lookups.py  models.py  resources.py  schema.py  serializers.py  tables.py  tests.py  urls.py  utils.py  views.py  widgets.py
turtle_tag/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
turtle_tags/: admin.py  api.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
users/: admin.py  api.py  api_v2.py  filters.py  forms.py  middleware.py  models.py  serializers.py  urls.py  utils.py  views.py  widgets.py
utility/: requirements-xenial.apt
wamtram/: admin.py  apps.py  models.py  routers.py  urls.py  views.py
wamtram2/: admin.py  apps.py  forms.py  models.py  modelsold.py  routers.py  templates.json  urls.py  views.py  wamtram2_schema_summary.md
wastd/: __init__.py  api.py  context_processors.py  dashboard.py  middleware.py  odk.py  router.py  schema.py  settings-test.py  settings.py  test-settings.py  urls.py  utils.py  widgets.py  wsgi.py
(+1086 files in other folders)
