[tool.poetry]
name = "wastd"
version = "2.0.3"
description = "Western Australian Sea Turtles Database"
authors = ["Florian Mayer <florian.mayer@dbca.wa.gov.au>", "Ashley Felton <ashley.felton@dbca.wa.gov.au>","Evan Hallein <evan.hallein@dbca.wa.gov.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.14"
django-extensions = "3.2.3"
psycopg2 = "2.9.9"
dj-database-url = "2.1.0"
gunicorn = "22.0.0"
python-dotenv = "1.0.1"
dbca-utils = "2.0.2"
django-fsm = "2.8.1"
django-fsm-log = "3.1.0"
django-fsm-admin-maintained = "1.2.6"
python-dateutil = "2.9.0"
python-slugify = "8.0.4"
django-filter = "24.1"
django-polymorphic = "3.1.0"
django-reversion = "5.0.12"
django-crispy-forms = "1.14.0"
xmltodict = "0.13.0"
pandas = "2.2.0"
django-tables2 = "2.7.0"
django-select2 = "8.0.0"
django-geojson = "4.0.0"
django-import-export = "3.3.7"
django-export-download = "0.2.3"
pillow = "10.3.0"
whitenoise = {version = "6.6.0", extras = ["brotli"]}
phonenumbers = "8.13.32"
django-phonenumber-field = "7.3.0"
mssql-django = "1.4.1"
webtemplate-dbca = "1.5.1"
django-storages = {version = "1.14.2", extras = ["azure"]}
django-map-widgets = "0.4.2"
django-nested-admin = "^4.0.2"
django-grappelli = "3.0.8"
django-bootstrap4 = "24.1"
django-easy-select2 = "1.5.8"
sentry-sdk = {version = "1.45.0", extras = ["django"]}
django-debug-toolbar = "^4.4.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.23.0"
ipdb = "^0.13.13"
black = "^24.3.0"
ruff = "^0.3.3"
sphinx = "^7.0.1"
vulture = "^2.7"
django-debug-toolbar = "^4.2.0"
pre-commit = "^3.7.0"
coverage = "^7.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes.
select = ["E", "F"]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
# Always autofix.
fix = true
exclude = ["__pycache__", "migrations"]
