[project]
name = "wastd"
version = "2.2.16"
description = "Western Australian Sea Turtles Database"
authors = [
    { name = "Florian Mayer", email = "florian.mayer@dbca.wa.gov.au" },
    { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
    { name = "Evan Hallein", email = "evan.hallein@dbca.wa.gov.au" },
    { name = "Rick Wang", email = "rick.wang@dbca.wa.gov.au" },
]
requires-python = ">=3.11,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "django==4.2.29",
    "django-extensions==3.2.3",
    "dj-database-url==3.0.1",
    "gunicorn==23.0.0",
    "python-dotenv==1.2.1",
    "dbca-utils==2.1.5",
    "django-fsm==2.8.1",
    "django-fsm-log==3.1.0",
    "django-fsm-admin-maintained==1.2.6",
    "python-dateutil==2.9.0",
    "python-slugify==8.0.4",
    "django-filter==24.1",
    "django-polymorphic==3.1.0",
    "django-reversion==5.0.12",
    "django-crispy-forms==1.14.0",
    "xmltodict==0.13.0",
    "pandas==2.2.0",
    "django-tables2==2.7.0",
    "django-select2==8.4.1",
    "django-geojson==4.0.0",
    "django-import-export==3.3.7",
    "django-export-download==0.2.3",
    "pillow==12.1.1",
    "whitenoise[brotli]==6.8.2",
    "phonenumbers==9.0.14",
    "django-phonenumber-field==7.3.0",
    "mssql-django==1.6",
    "webtemplate-dbca==1.5.1",
    "django-storages[azure]==1.14.2",
    "django-map-widgets==0.4.2",
    "django-nested-admin>=4.0.2,<5",
    "django-grappelli==3.0.8",
    "django-bootstrap4==24.1",
    "django-easy-select2==1.5.8",
    "sentry-sdk[django]==2.44.0",
    "django-debug-toolbar>=4.2.2,<5",
    "python-docx>=1.1.2,<2",
    "psycopg[binary, pool]==3.2.12",
    "setuptools>=80.9.0,<81",
]

[dependency-groups]
dev = [
    "ipython>=9.7.0,<10",
    "ipdb>=0.13.13,<0.14",
    "black>=24.3.0,<25",
    "ruff>=0.14.2,<0.15",
    "sphinx>=7.0.1,<8",
    "vulture>=2.7,<3",
    "django-debug-toolbar>=4.2.0,<5",
    "pre-commit>=3.7.0,<4",
    "coverage>=7.5.3,<8",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes.
lint.select = ["E", "F"]
# Never enforce `E501` (line length violations).
lint.ignore = ["E265", "E501", "E722"]
# Always autofix.
fix = true
exclude = ["__pycache__", "migrations"]
