[project]
name = "wastd"
version = "2.3.0"
description = "Western Australian Sea Turtles Database"
authors = [
  { name = "Florian Mayer", email = "florian.mayer@dbca.wa.gov.au" },
  { name = "Ashley Felton", email = "ashley.felton@dbca.wa.gov.au" },
  { name = "Evan Hallein", email = "evan.hallein@dbca.wa.gov.au" },
  { name = "Rick Wang", email = "rick.wang@dbca.wa.gov.au" },
]
requires-python = ">=3.13,<4"
readme = "README.md"
license = "MIT"
dependencies = [
  "django==5.2.15",
  "psycopg[binary,pool]==3.3.4",
  "django-extensions==4.1",
  "dj-database-url==3.1.2",
  "gunicorn==26.0.0",
  "python-dotenv==1.2.2",
  "dbca-utils==2.2.0",
  "django-fsm==2.8.1",
  "django-fsm-log==3.1.0",
  "django-fsm-admin-maintained==1.2.6",
  "python-dateutil==2.9.0.post0",
  "python-slugify==8.0.4",
  "django-filter==25.2",
  "django-polymorphic==4.11.5",
  "django-reversion==6.2.0",
  "django-crispy-forms==2.6",
  "xmltodict==1.0.4",
  "pandas==3.0.3",
  "django-tables2==2.8.0",
  "django-select2==8.4.1",
  "django-geojson==4.2.0",
  "django-import-export==4.4.1",
  "django-export-download==0.2.3",
  "pillow==12.2.0",
  "whitenoise[brotli]==6.12.0",
  "phonenumbers==9.0.32",
  "django-phonenumber-field==8.4.0",
  "mssql-django==1.7.2",
  "webtemplate-dbca==1.8.3",
  "django-storages[azure]==1.14.6",
  "django-map-widgets==0.5.2",
  "django-grappelli==4.0.4",
  "django-nested-admin==4.1.6",
  "django-bootstrap4==26.1",
  "django-easy-select2==1.5.8",
  "sentry-sdk[django]==2.62.0",
  "python-docx==1.2.0",
  "setuptools==80.10.2",
  "openpyxl==3.1.5",
  "xlwt==1.3.0",
]

[dependency-groups]
dev = [
  "ipython>=9.14.0",
  "ipdb>=0.13.13",
  "django-debug-toolbar>=4.2.2,<5",
  "pre-commit>=4.6.0",
  "coverage>=7.14.1",
]

[tool.uv]
package = false
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 140
indent-width = 4
extend-exclude = ["migrations"]
# Enable Pyflakes `E` and `F` codes.
lint.select = ["E", "F"]
# Never enforce `E501` (line length violations).
lint.ignore = ["E265", "E501", "E722"]
# Always autofix.
fix = true
exclude = ["__pycache__", "migrations"]
